[gd_scene format=3 uid="uid://dp1n7xievr2ju"]

[ext_resource type="Script" uid="uid://ba08qv88abuc1" path="res://Scripts/player.gd" id="1_u52ul"]
[ext_resource type="Texture2D" uid="uid://b7g5hdskx80t8" path="res://placeholder/knight_facing_left_0.png" id="2_vonw3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vonw3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi3di"]
size = Vector2(3000, 10)

[node name="Level" type="Node2D" unique_id=1270676885]

[node name="Player" type="CharacterBody2D" parent="." unique_id=655380877]
position = Vector2(763, 252)
script = ExtResource("1_u52ul")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" unique_id=1592016517]
shape = SubResource("RectangleShape2D_vonw3")

[node name="Sprite2D" type="Sprite2D" parent="Player" unique_id=1438363204]
texture = ExtResource("2_vonw3")

[node name="DashCooldownTimer" type="Timer" parent="Player" unique_id=994930337]
wait_time = 15.0

[node name="SmoothDashTimer" type="Timer" parent="Player" unique_id=1283499196]
wait_time = 0.3

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=2036042101]
position = Vector2(716, 529)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=246748153]
position = Vector2(3, -5)
shape = SubResource("RectangleShape2D_oi3di")

[connection signal="timeout" from="Player/DashCooldownTimer" to="Player" method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="Player/SmoothDashTimer" to="Player" method="_on_smooth_dash_timer_timeout"]
